# test_task

./: .clang-format  .gitignore  readme.md
src/: CMakeLists.txt  Makefile  main.cpp
src/lib/: intersection.cpp  intersection.h  segment3d.cpp  segment3d.h  vector3d.cpp  vector3d.h
src/tests/: CMakeLists.txt  tests.cpp
